--- a/feladatok/03.md
+++ b/feladatok/03.md
@@ -495,3 +495,83 @@ public:
 };
 ```
 </details>
+
+### Mediánszámoló
+
+Írj osztályt, amibe egy tagfüggvénnyel számokat lehet tenni, egy másik tagfüggvénnyel pedig az eddig betett számok mediánját lehet lekérni.
+<details>
+ <summary>megoldás:</summary>
+ 
+```cpp
+/**
+ * A feladat azért trükkös, mert a medián kiszámításához mindenképp tárolni
+ * kell a hozzáadott számokat. Ezt egyfelől dinamikus memóriakezeléssel kell
+ * megoldani, másfelől pedig a növekvő/csökkenő sorrendről is gondoskodni kell.
+ * 
+ * Ebben a megoldásban minden szám már a megfelelő helyre lesz beszúrva, így
+ * eleve rendezetten vannak tárolva a számok. Természetesen másképp is meg lehet
+ * oldani a feladatot.
+ */
+class MedianSzamolo {
+private:
+    double *szamok; // a rendezett tömb a számokkal
+    int n; // a tömb elemszáma
+
+public:
+    MedianSzamolo(){
+        // kezdetben üres
+        szamok = nullptr;
+        n = 0;
+    }
+    
+    // szám hozzáfűzése
+    void hozzafuz(double szam){
+        // ha ez az első, akkor új tömb
+        if(n==0){
+            n = 1;
+            szamok = new double[1];
+            *szamok = szam;
+            return;
+        }
+        
+        // ha nem ez az első szám, akkor tömb dinamikus bővítése
+        // először új tömböt foglalunk
+        double *uj_szamok = new double[n+1];
+        
+        // úgy kell beszúrni az új számot, hogy a sorrendiség megmaradjon
+        
+        // az új számnál nem nagyobbakat másoljuk át
+        int i; // HF: miért van itt kívül deklarálva i?
+        for(i=0; szamok[i]<=szam && i<n; i++) // fontos a feltétel!
+            uj_szamok[i] = szamok[i];
+        
+        // új szám beszúrása
+        uj_szamok[i] = szam;
+        
+        // maradék számok átmásolása, amik nagyobbak
+        for(;i<n;i++) // HF: miért nincsen int i=0?
+            uj_szamok[i+1] = szamok[i];
+        
+        // régi számok törlése
+        delete szamok;
+        
+        // kicserélés az új számokra
+        szamok = uj_szamok;
+        n++;
+    }
+    
+    // medián kiszámítása
+    double getMedian() const {
+        if(n%2==0){
+            return (szamok[n/2] + szamok[n/2-1]) / 2;
+        }
+        return szamok[(n-1)/2];
+    }
+    
+    // destruktor a dinamikus memória felszabadításához
+    virtual ~MedianSzamolo() {
+        delete[] szamok;
+    }
+};
+```
+</details>
