5. hét új feladat.

--- a/feladatok/05.md
+++ b/feladatok/05.md
@@ -147,3 +147,71 @@ while(!bemenet.eof()){
 }
 ```
 </details>
+
+
+### .csv olvasó
+
+Készíts osztályt .csv fájlok beolvasására.
+
+- legyen konstruktor, amiben a megnyitandó fájl nevét kell megadni
+- legyen konstruktor, amiben a fájlnév mellett az elválasztó is megadható 
+- legyen tagfüggvénye, ami egy sort beolvas, a tartalmát az elválasztó karakter
+alapján feldarabolja, a darabokból képez egy tömböt, aminek kezdőcímével
+visszatér (az elkészült tömb elemszámát paraméterben kell visszaadni, ha már
+vége a fájlnak, akkor ez 0 legyen)
+
+<details>
+ <summary>megoldás:</summary>
+ 
+```cpp
+class CsvParser {
+private:
+    ifstream file;
+    string elvalaszto;
+public:
+    
+    // konstuktor, opcionálisan megadható elválasztóval
+    CsvParser(const string &filenev, const string &elvalaszto = ";"){
+        // tagfüggvények inicializálása
+        this->elvalaszto = elvalaszto;
+        file.open(filenev);
+    }
+    
+    // sorbeolvasó, paraméterben visszaadja az oszlopok számát
+    string *sorOlvas(int &db){
+        // fájl végének ellenőrzése
+        if(file.eof()){
+            db=0;
+            return nullptr;
+        }
+        
+        // sor beolvasása
+        string sor;
+        getline(file, sor);
+        
+        // hány darabra kell bontani a sort? -> elválasztók száma + 1
+        db = 1;
+        int honnan=0;
+        while(sor.find(elvalaszto,honnan) != -1){
+            db++;
+            honnan = sor.find(elvalaszto,honnan) + elvalaszto.length();
+        }
+        
+        // tömb foglalása
+        string *darabok = new string[db];
+        
+        // tömb megtöltése
+        honnan = 0;
+        for(int i=0; i<db; i++){
+            int meddig = sor.find(elvalaszto, honnan);
+            darabok[i] = sor.substr(honnan, meddig-honnan);
+            honnan = meddig+elvalaszto.length();
+        }
+        
+        // visszatérés az eredménnyel
+        return darabok;
+    }
+};
+```
+</details>
+
