5. hét új feladat.

--- a/feladatok/05.md
+++ b/feladatok/05.md
@@ -215,3 +215,88 @@ public:
 ```
 </details>
 
+# Kereset
+
+Az emberek.csv fájl minden sora egy ember nevét, életkorát és keresetét tartalmazza az alábbi minta szerint:
+
+```
+Shanta Slick,55,321
+Shani Selph,53,530
+...
+```
+
+Írj programot, ami választ ad az alábbi kérdésekre:
+1. Kik fiatalabbak 30 évnél?
+2. Mennyit keresnek az emberek átlagosan 50 év felett?
+3. Hány ember adatai vannak a fájlban?
+4. Hány százalékuk keres 500 felett?
+
+Ha egy sor vesszővel kezdődik, az kommentnek számít, nem kell feldolgozni.
+
+<details>
+ <summary>megoldás:</summary>
+ 
+```cpp
+// korábban elkészített parser használata
+CsvParser parser("teszt.csv",",");
+
+// változók statisztikához
+int db_ember=0;
+int db_ember_50_felett = 0;
+int osszkereset_50_felett = 0;
+int db_ember_sokat_keres=0;
+
+// 1. feladat: ki fiatalabb 30 évnél?
+cout << "30 evnel fiatalabbak:" << endl;
+
+// addig olvassuk, amíg van adat
+while(1){
+
+    // sor beolvasása
+    int n;
+    string *tomb = parser.sorOlvas(n);
+
+    // ha nincs több adat, megállunk
+    if(n==0)
+        break;
+
+    // ha nem komment, akkor dolgozzuk fel az adatokat
+    if(tomb[0] != ""){
+        // adatkonverzió
+        string &nev = tomb[0];
+        int eletkor = stoi(tomb[1]);
+        int kereset = stoi(tomb[2]);
+
+        // kik fiatalabbak 30 évnél?
+        if(eletkor<30)
+            cout << "    " << nev << endl;
+
+        // 50 év feletti átlagkereset
+        if(eletkor>50){
+            db_ember_50_felett++;
+            osszkereset_50_felett+=kereset;
+        }
+
+        // 500-nál többet kereső emberek száma
+        if(kereset>500)
+            db_ember_sokat_keres++;
+
+
+        // emberek számlálása
+        db_ember++;
+    }
+
+    // dinamikusan foglalt tömb, fel kell szabadítani
+    delete[] tomb;
+}
+
+// 2. feladat: 50 év felettiek átlagkeresete
+cout << "atlagkereset 50 ev felett: " << osszkereset_50_felett/db_ember_50_felett << endl;
+
+// 3. feladat: hány ember adatai vannak a fájlban?
+cout << "a fajlban " << db_ember << " ember adatai vannak" << endl;
+
+// 4. feladat: hány százalék keres 500 felett?
+cout << "az emberek " << db_ember_sokat_keres*100/db_ember << "%-a keres 500 felett" << endl;
+```
+</details>
