--- a/feladatok/05.md
+++ b/feladatok/05.md
@@ -215,7 +215,7 @@ public:
 ```
 </details>
 
-# Kereset
+### Kereset
 
 Az emberek.csv fájl minden sora egy ember nevét, életkorát és keresetét tartalmazza az alábbi minta szerint:
 
