--- a/feladatok/04.md
+++ b/feladatok/04.md
@@ -209,3 +209,88 @@ void caesar(string &str, int n) {
 }
 ```
 </details>
+
+### Titkosítás helyettesítéssel
+
+Írj egy osztályt, amivel egyszerű helyettesítéses titkosítás valósítható meg. Ez azt jelenti, hogy minden betűt helyettesítsen egyértelműen egy másik.
+Elég csak a kisbetűket titkosítani, minden más maradjon eredeti.
+- a konstruktorban generálódjon véletlenszerűen egy kulcs (az összekuszált ábécé)
+- legyen függvény, amivel lekérhető a kulcs
+- legyen függvény karakter/string kódolására/dekódolására
+
+<details>
+ <summary>megoldás:</summary>
+ 
+```cpp
+#include <cstdlib>
+#include <ctime>
+#include <string>
+
+using namespace std;
+
+class Titkosito {
+private:
+	string kulcs; // melyik betűt mire cseréljen
+
+public:
+	Titkosito() {
+		// kulcs generálása
+		kulcs = "abcdefghijklmnopqrstuvwxyz";
+
+		// összekuszálás
+		for (int i = 0; i < 1000; i++) {
+			// két random elem választása
+			int egyik = rand() % 26;
+			int masik = rand() % 26;
+
+			// csere
+			char tmp = kulcs[egyik];
+			kulcs[egyik] = kulcs[masik];
+			kulcs[masik] = tmp;
+		}
+	}
+
+	// kulcs getter
+	string getKulcs() const {
+		return kulcs;
+	}
+
+	// egy karakter kódolása
+	char kodol(char ch) {
+		// ha kisbetű, akkor kódol
+		if ('a' <= ch && ch <= 'z') {
+			ch = kulcs[ch - 'a'];
+		}
+
+		return ch;
+	}
+
+	// egy sztring kódolása
+	string kodol(const string &str) {
+		string eredmeny;
+		for (int i = 0; i < str.size(); i++) {
+			eredmeny += kodol(str[i]);
+		}
+		return eredmeny;
+	}
+
+	// egy karakter dekódolása
+	char dekodol(char ch) {
+		for (int i = 0; i < 26; i++)
+			if (ch == kulcs[i])
+				return 'a' + i;
+		return ch;
+	}
+
+	// sztring dekódolása
+	string dekodol(const string &str) {
+		string eredmeny;
+		for (int i = 0; i < str.size(); i++) {
+			eredmeny += dekodol(str[i]);
+		}
+		return eredmeny;
+	}
+
+};
+```
+</details>
