--- a/jegyzet/05.md
+++ b/jegyzet/05.md
@@ -70,17 +70,17 @@ ofstream kimenet;
 kimenet.open("szoveg.txt");
 ```
 
-Ha megnyitáskor megadjuk paraméterként az ios_base:app értéket, akkor hozzáfűzés módban lehet a fájlba írni.
+Ha megnyitáskor megadjuk paraméterként az ios_base::app értéket, akkor hozzáfűzés módban lehet a fájlba írni.
 
 ```cpp
 // fájl megnyitása (fájlnév konstruktorban)
-ofstream kimenet("szoveg.txt", ios_base:app);
+ofstream kimenet("szoveg.txt", ios_base::app);
 ```
 
 ```cpp
 // fájl megnyitása az open() tagfügvénnyel
 ofstream kimenet;
-kimenet.open("szoveg.txt", ios_base:app);
+kimenet.open("szoveg.txt", ios_base::app);
 ```
 
 A fájlba írást az ofstream objektumokon ugyanúgy lehet végezni, mint a cout objektumon.
