--- a/feladatok/08.md
+++ b/feladatok/08.md
@@ -2,6 +2,54 @@
 
 - operátor túlterhelés
 
+### Számtani sorozat
+
+Készíts számtani sorozat osztályt.
+- A konstruktorban lehessen megadni az első elemet és a differenciált.
+- Legyen [] opertátora, amivel az adott indexű elemet lehessen lekérni. (A sorszámozás 0-tól kezdődik.)
+- Legyen += operátora, amivel a sorozat minden tagjához hozzáadható egy szám.
+- Legyen += operátora, amivel egy másik sorozat adható hozzá.
+
+<details>
+ <summary>megoldás:</summary>
+ 
+```cpp
+class SzamtaniSorozat {
+private:
+    // az első elem és a differenciál
+    double elso, diff;
+
+public:
+    
+    // konstruktor
+    SzamtaniSorozat(double elso, double diff){
+        this->elso = elso;
+        this->diff = diff;
+    }
+    
+    // adott elem lekérése
+    double operator[](int i) const {
+        return elso + i*diff;
+    }
+    
+    // szám hozzáadása minden elemhez
+    SzamtaniSorozat operator+=(double x){
+        // ilyenkor elég az első taghoz hozzáadni
+        elso += x;
+        return *this; // illik saját magával visszatérni
+    }
+    
+    // sorozat hozzáadása ehhez a sorozathoz
+    SzamtaniSorozat operator+=(const SzamtaniSorozat &masik){
+        elso += masik.elso;
+        diff += masik.diff;
+        return *this;
+    }
+};
+```
+</details>
+
+
 ### Komplex szám operátorai
 
 Készíts komplex szám opsztályt az alábbi operátorokkal:
@@ -17,7 +65,7 @@ Készíts komplex szám opsztályt az alábbi operátorokkal:
  
 ```cpp
 class Komplex{
-public: // TODO
+private:
     double re, im;
     
 public:
