Javított 8. heti példák.

--- a/feladatok/08.md
+++ b/feladatok/08.md
@@ -33,17 +33,15 @@ public:
     }
     
     // szám hozzáadása minden elemhez
-    SzamtaniSorozat operator+=(double x){
+    void operator+=(double x){
         // ilyenkor elég az első taghoz hozzáadni
         elso += x;
-        return *this; // illik saját magával visszatérni
     }
     
     // sorozat hozzáadása ehhez a sorozathoz
-    SzamtaniSorozat operator+=(const SzamtaniSorozat &masik){
+    void operator+=(const SzamtaniSorozat &masik){
         elso += masik.elso;
         diff += masik.diff;
-        return *this;
     }
 };
 ```
@@ -69,6 +67,16 @@ private:
     double re, im;
     
 public:
+    Komplex(){
+        this->re = 0;
+        this->im = 0;
+    }
+    
+    Komplex(double re, double im){
+        this->re = re;
+        this->im = im;
+    }
+    
     Komplex operator+(const Komplex &masik) const {
         Komplex eredmeny;
         eredmeny.re = re+masik.re;
@@ -97,19 +105,19 @@ public:
         return eredmeny;
     }
     
-    Komplex operator+=(const Komplex &masik) {
+    Komplex& operator+=(const Komplex &masik) {
         re += masik.re;
         im += masik.im;
         return *this; // ilyenkor illik a saját értéket visszaadni
     }
     
-    Komplex operator-=(const Komplex &masik) {
+    Komplex& operator-=(const Komplex &masik) {
         re -= masik.re;
         im -= masik.im;
         return *this;
     }
     
-    Komplex operator*=(const Komplex &masik) {
+    Komplex& operator*=(const Komplex &masik) {
         // itt már muszáj átmenetileg tárolni adatokat
         Komplex eredmeny;
         eredmeny.re = re*masik.re - im*masik.im;
@@ -119,7 +127,7 @@ public:
         return *this;
     }
     
-    Komplex operator/=(const Komplex &masik) {
+    Komplex& operator/=(const Komplex &masik) {
         // itt is muszáj átmenetileg tárolni adatokat
         Komplex eredmeny;
         eredmeny.re = (re*masik.re + im*masik.im)/(masik.re*masik.re + masik.im*masik.im);
@@ -161,30 +169,30 @@ public:
         return eredmeny;
     }
     
-    Komplex operator+=(double masik) {
+    Komplex& operator+=(double masik) {
         re += masik;
         return *this; // ilyenkor illik a saját értéket visszaadni
     }
     
-    Komplex operator-=(double masik) {
+    Komplex& operator-=(double masik) {
         re -= masik;
         return *this;
     }
     
-    Komplex operator*=(double masik) {
+    Komplex& operator*=(double masik) {
         re *= masik;
         im *= masik;
         return *this;
     }
     
-    Komplex operator/=(double masik) {
+    Komplex& operator/=(double masik) {
         re /= masik;
         im /= masik;
         return *this;
     }
     
     // pre increment
-    Komplex operator++(){
+    Komplex& operator++(){
         re++;
         return *this;
     }
@@ -197,7 +205,7 @@ public:
     }
     
     // pre decrement
-    Komplex operator--(){
+    Komplex& operator--(){
         re--;
         return *this;
     }
@@ -208,7 +216,14 @@ public:
         re--;
         return tmp;
     }
+    
+    friend ostream& operator<<(ostream &os,const Komplex &z);
 };
+
+ostream& operator<<(ostream &os,const Komplex &z){
+    os<<z.re << "+" << z.im << "i";
+    return os;
+}
 ```
 </details>
 
